Add database presets.